--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "laravel-mix": "^2.0",
         "vue": "^2.5.7",
         "vue-router": "^3.0.1"
+    },
+    "dependencies": {
+        "bulma": "^0.7.1"
     }
 }
